--- a/app/src/main/res/layout/days_main.xml
+++ b/app/src/main/res/layout/days_main.xml
@@ -5,7 +5,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="8/8"
+        android:text="13日（后天）"
         android:textSize="20dp"
         android:id="@+id/day"
         android:paddingLeft="10dp"/>
