--- a/app/src/main/res/layout/line.xml
+++ b/app/src/main/res/layout/line.xml
@@ -3,10 +3,11 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
         <TextView
-            android:layout_width="50dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:id="@+id/time1"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"/>
         <!--<ImageView-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
@@ -15,6 +16,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:id="@+id/Temp1"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"/>
 
 </LinearLayout>
