添加图片文件。加入了部分天气对应的图标。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/r_layout">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment"
+        android:layout_above="@+id/bn"
+        android:orientation="vertical">
+    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
-       android:layout_alignParentBottom="true">
-       <Button
+       android:layout_alignParentBottom="true"
+       android:id="@+id/bn"
+       >
+       <ImageView
            android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_height="match_parent"
+           android:src="@mipmap/tianqiyubao"
            android:id="@+id/bn1"
            android:layout_weight="1"/>
-       <Button
+       <ImageView
            android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_height="match_parent"
+           android:src="@mipmap/community"
            android:id="@+id/bn2"
+           android:layout_weight="1"/>
+
+       <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="match_parent"
+           android:src="@mipmap/personal"
            android:layout_weight="1"/>
    </LinearLayout>
 
