--- a/app/src/main/res/layout/imagetext.xml
+++ b/app/src/main/res/layout/imagetext.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:id="@+id/image"
         android:scaleType="centerInside"
@@ -12,7 +12,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tishi"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/text"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:gravity="center_horizontal"/>
 
 </LinearLayout>
