--- a/app/src/main/res/layout/line.xml
+++ b/app/src/main/res/layout/line.xml
@@ -8,10 +8,12 @@
             android:id="@+id/time1"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"/>
-        <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--/>-->
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/image"
+            android:layout_gravity="center_horizontal"
+            />
         <TextView
             android:layout_width="50dp"
             android:layout_height="wrap_content"
