--- a/app/src/main/res/layout/imagetext.xml
+++ b/app/src/main/res/layout/imagetext.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:id="@+id/image"
+        android:id="@+id/img_index"
         android:scaleType="centerInside"
         android:paddingBottom="2dip"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tishi"
+        android:id="@+id/tv_data"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text"
+        android:id="@+id/tv_explan"
         android:layout_gravity="center"
         android:gravity="center_horizontal"/>
 
