--- a/app/src/main/res/layout/line.xml
+++ b/app/src/main/res/layout/line.xml
@@ -5,19 +5,19 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:id="@+id/time1"
+            android:id="@+id/tv_time"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"/>
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/image"
+            android:id="@+id/iv_image"
             android:layout_gravity="center_horizontal"
             />
         <TextView
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:id="@+id/Temp1"
+            android:id="@+id/tv_temp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"/>
 
