--- a/app/src/main/res/layout/activity_discuss.xml
+++ b/app/src/main/res/layout/activity_discuss.xml
@@ -4,25 +4,28 @@
     android:layout_height="match_parent">
 <EditText
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:id="@+id/user_text"/>
     <ImageView
         android:layout_width="130dp"
         android:layout_height="150dp"
-        android:background="@mipmap/jia"
+        android:src="@mipmap/jia"
         android:id="@+id/iv_addimg"
         android:layout_below="@+id/user_text"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:id="@+id/btn_bn2"
         android:text="取消"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:layout_below="@+id/iv_addimg"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#00ffff"
         android:id="@+id/btn_bn1"
         android:layout_below="@+id/iv_addimg"
+        android:layout_marginRight="50dp"
         android:layout_alignParentRight="true"
         android:text="发表"
         android:textSize="30dp"/>
