--- a/app/src/main/res/layout/trends_fragment.xml
+++ b/app/src/main/res/layout/trends_fragment.xml
@@ -21,6 +21,7 @@
     </RelativeLayout>
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/tv_discuss">
     </ListView>
 </LinearLayout>
