添加DataTrends，TrendsAdapter文件。做到插入至第一列

--- a/app/src/main/res/layout/trends_fragment.xml
+++ b/app/src/main/res/layout/trends_fragment.xml
@@ -29,6 +29,6 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tv_discuss">
+        android:id="@+id/lv_discuss">
     </ListView>
 </LinearLayout>
