--- a/app/src/main/res/layout/trends_fragment_line.xml
+++ b/app/src/main/res/layout/trends_fragment_line.xml
@@ -31,17 +31,17 @@
             android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/user_img1" />
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/user_img2" />
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/user_img3" />
         </LinearLayout>
