--- a/app/src/main/res/layout/trends_fragment_line.xml
+++ b/app/src/main/res/layout/trends_fragment_line.xml
@@ -72,7 +72,7 @@
         <ListView
             android:id="@+id/discuss"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_below="@id/function"
             android:layout_marginTop="28dp"></ListView>
         <TableLayout
@@ -89,14 +89,12 @@
                     android:paddingRight="8dip"
                     android:paddingTop="5dip"
                     android:paddingBottom="5dip"
-                    android:singleLine="true"
                     android:textColorHint="#AAAAAA"
                     android:textSize="18sp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="0dip"
                     android:imeOptions="actionNext"
-                    android:ellipsize="end"
-                    android:phoneNumber="true"  />
+                    android:ellipsize="end" />
 
                 <Button
                     android:layout_width="match_parent"
