--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/r_layout">
+
     <LinearLayout
+        android:id="@+id/ll_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/ll_fragment"
-        android:layout_above="@+id/ll_btn"
-        android:orientation="vertical">
-    </LinearLayout>
+        android:orientation="vertical"
+        android:layout_above="@+id/ll_btn"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
