添加了个人中的信息和设置的布局文件，完成了登陆注册以及个人界面的数据交互。

--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -18,9 +18,12 @@
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_toEndOf="@+id/iv_head"
             android:layout_toRightOf="@+id/iv_head"
             android:text="点击登陆"
-            android:textSize="20dp" />
+            android:textSize="35dp" />
 
         <TextView
             android:id="@+id/tv_information"
